2006-12-30	kaffeetisch

	* Gnome2.pm, NEWS: Stable release 1.041.

2006-12-30	kaffeetisch

	* t/GnomeUtil.t: Fix a test failure.

2006-10-03	kaffeetisch

	* Gnome2.pm: Fix a POD error.

2006/03/12	kaffeetisch

	* Gnome2.pm, NEWS, README: Stable release 1.040.

2005/12/12	kaffeetisch

	* Gnome2.pm, NEWS: Unstable release 1.030.

2005/10/08	kaffeetisch

	* t/GnomeDateEdit.t: Use is_deeply() on a flags value.

	* t/GnomeIconList.t: Realize the list to avoid thousands of
	warnings.

	* t/GnomeIconTheme.t: Fix a failure reported by ultradm at cpan
	dot org.

2005/06/23	kaffeetisch

	* Gnome2.pm, Makefile.PL, META.yml, NEWS: Version 1.022.

2005/06/22	kaffeetisch

	* t/GnomeDateEdit.t: Use is() instead of is_deeply() to test flags
	values since the latter was changed to always use the string
	version of overloaded objects in recent versions of Test::More,
	whereas the former seems to work correctly.  Tested with
	Test::More 0.45 and 0.60.

2005/06/06	kaffeetisch

	* genmaps.pl, MANIFEST: Remove the old lad genmaps.pl since it's
	unused nowadays.

	* Gnome2.pm, META.yml, NEWS: Version 1.022.

2005/05/29	kaffeetisch

	* t/GnomeDateEdit.t: Remove the TODO around a test that previously
	failed due to the now resolved Test::More bug.

	* t/GnomeIconList.t: Skip all tests as GnomeIconList seems to be
	broken right now.

	* t/GnomeThumbnail.t: Skip tests if yes.xpm can't be found.

2005/03/06	kaffeetisch

	* Gnome2.pm, META.yml, NEWS, README: Version 1.021.

2005/03/06	kaffeetisch

	* t/GnomeDateEdit.t: Mark failing test as TODO till we have a
	solution for the Test::More issue.

2005/02/10 22:15 (+0100) kaffeetisch

	* Gnome2.pm: Do it like all the other cool kids and alter
	dl_load_flags() to avoid warnings on Darwin.

2004/10/24 11:55 (-0400) rwmcfa1

	* MANIFEST.SKIP: updates

	* perl-Gnome2.spec.in: new scheme that addresses x86_64 problems
	found by Carl Nygard

2004/09/14 00:08 (+0200) kaffeetisch

	* t/GnomeIconList.t, t/GnomePasswordDialog.t, t/GnomeProgram.t,